add fix for mobile hover states

--- a/media.html
+++ b/media.html
@@ -41,10 +41,31 @@ video:
 
     <script defer src="https://www.youtube.com/iframe_api"></script>
     <script>
+
         const YouTubePlayer =
         {
+            /**
+             * Controls the playback of a YT video. If an id is passed, will play the video with that id. With no arguments, will pause the video.
+             * @typedef {(inYTID?:string)=>void} Controls */
+
+            /**
+             * When the video changes, this handler will be called for each thumbnail element; with the 2nd argument being if the element is now active.
+             * @typedef {(element:HTMLElement, on:boolean)=>void} ChangeHandler */
+
+            /**
+             * List of all player controls by DOM id
+             * @type {Record<string, Controls>}
+            */
             List: {},
-            /** @type {(inDOMID:string, inYTID:string, inAttr:string, inChangeHandler(e:HTMLElement))=>(inYTID?:string)=>void} */
+
+            /**
+             * Creates a new YouTube player
+             * @param {string} inDOMID The DOM id of the element to become the player
+             * @param {string} inYTID The id of the YouTube video to start with
+             * @param {string} inAttr Elements with this attribute are assumed to have YouTube video id for the attribute value; clicking on them will play the video with this id.
+             * @param {ChangeHandler} inChangeHandler
+             * @returns {Controls}
+             */
             Make(inDOMID, inYTID, inAttr, inChangeHandler)
             {
                 let _player = false;
@@ -53,8 +74,9 @@ video:
                 {
                     const match = e.getAttribute(inAttr) == inID;
                     e.setAttribute("data-active", match);
-                    match && inChangeHandler(e);
+                    inChangeHandler(e, match);
                 });
+                /** @type {Controls} */
                 const toggle =(inYTID)=>
                 {
                     if(!inYTID){ _player.pauseVideo(); }
@@ -62,15 +84,16 @@ video:
                     else if(_player.playerInfo.playerState == 2 || _player.playerInfo.playerState == 5){ _player.playVideo(); }
                 }
                 const handler = event => toggle( event.composedPath().find(step=>step.hasAttribute?.(inAttr))?.getAttribute?.(inAttr) )
-                
+
                 window?.YT?.loaded ? _make() : window.onYouTubeIframeAPIReady = _make;
                 _show(inYTID);
                 document.body.addEventListener("click", handler);
-                document.body.addEventListener("touchend", handler);
                 this.List[inDOMID] = toggle;
                 return toggle;
             },
-            Kill(){ Object.values(this.List).forEach(p=>p()); }
+            
+            /** stops all players */
+            Halt(){ Object.values(this.List).forEach(p=>p()); }
         };
     </script>
 
@@ -121,7 +144,7 @@ video:
         </div>
     </div>
     <script>
-        YouTubePlayer.Make("yt", "Foo7PwkjR5I", "data-video", element=>document.querySelector(".video-title").innerHTML = element.getAttribute("data-title") || "");
+        YouTubePlayer.Make("yt", "Foo7PwkjR5I", "data-video", (element, on)=> on && (document.querySelector(".video-title").innerHTML = element.getAttribute("data-title") || ""));
     </script>
 
 </main>
