--- a/contact.html
+++ b/contact.html
@@ -33,5 +33,6 @@ sheet: "/css/contact.css"
         <div id="submit">
             <button type="submit">Submit</button>
         </div>
+        <input type="hidden" name="_gotcha" style="display:none !important">
     </form>
 </div>
