--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@ sheet: "/css/contact.css"
     </p>
     <p><a href="mailto:info@stringtrax.com">info@stringtrax.com</a></p>
     <p id="thanks">Thank you for contacting us! We will get back to you shortly!</p>
-    <form id= "contactForm" action="https://getform.io/f/d464489d-9162-41d8-8c55-e12414ccfc5a" method="POST">
+    <form id= "contactForm" action="https://formspree.io/f/mvoeward" method="POST">
         <div id="name">
             <label for="name">Name</label>
             <input id="name" name="name" type="text" placeholder="Enter your name" />
